-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0
-
None
-
Linux, gcc.
Calling QMainWindow::takeCentralWidget() when no central widget is set makes the application crash.
It would be better to handle this more gently and return null instead.
For Gerrit Dashboard: QTBUG-56628 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174891,4 | Fixed crash taking null central widget | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |